feat: creat a single player game

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -11,7 +11,26 @@
     />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
+  <body class="wrapper">
+    <header></header>
+    <main class="container">
+      <section class="center">
+        <h1 class="title">Tic Tac Toe</h1>
+        <div class="container-game">
+          <div data-index="0" class="item"></div>
+          <div data-index="1" class="item"></div>
+          <div data-index="2" class="item"></div>
+          <div data-index="3" class="item"></div>
+          <div data-index="4" class="item"></div>
+          <div data-index="5" class="item"></div>
+          <div data-index="6" class="item"></div>
+          <div data-index="7" class="item"></div>
+          <div data-index="8" class="item"></div>
+        </div>
+        <h2 class="result-game"></h2>
+        <button class="start-game">start over</button>
+      </section>
+    </main>
     <footer>
       <div class="content-footer center">
         <ul class="link-github">
