feat: add style current player

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -19,9 +19,14 @@
   <body class="wrapper">
     <header>
       <div class="header center">
-        <img class="logo" src="./assets/svg/tic-tac-toe.svg" alt="logo" />
-        <h1 class="title">Tic Tac Toe</h1>
-        <img class="sound" src="./assets/svg/volume.svg" alt="sound" />
+        <div class="left-header">
+          <img class="logo" src="./assets/svg/tic-tac-toe.svg" alt="logo" />
+          <h1 class="title">Tic Tac Toe</h1>
+        </div>
+        <div class="right-header">
+          <h2 class="records">table of records</h2>
+          <img class="sound" src="./assets/svg/volume.svg" alt="sound" />
+        </div>
       </div>
     </header>
     <main class="container">
@@ -37,11 +42,25 @@
           <div data-index="7" class="item"></div>
           <div data-index="8" class="item"></div>
         </div>
-        <h2 class="result-game">
-          Player X won on turn 4. A total of 7 moves were made.
-        </h2>
+        <h2 class="result-game"></h2>
         <button class="start-game">start over</button>
       </section>
+      <table>
+        <thead>
+          <tr>
+            <th>aaaa</th>
+            <th>bbbb</th>
+            <th>cccc</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1111</td>
+            <td>2222</td>
+            <td>3333</td>
+          </tr>
+        </tbody>
+      </table>
     </main>
     <footer>
       <div class="content-footer center">
