feat: add render table

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -30,7 +30,7 @@
       </div>
     </header>
     <main class="container">
-      <section class="center">
+      <section class="content center">
         <div class="container-game">
           <div data-index="0" class="item"></div>
           <div data-index="1" class="item"></div>
@@ -45,20 +45,23 @@
         <h2 class="result-game"></h2>
         <button class="start-game">start over</button>
       </section>
-      <table>
+      <table class="contentTable center hide">
+        <caption>
+          TABLE OF RECORDS
+        </caption>
         <thead>
           <tr>
-            <th>aaaa</th>
-            <th>bbbb</th>
-            <th>cccc</th>
+            <th>winner</th>
+            <th>total moves</th>
+            <th>winning move</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <!-- <tr>
             <td>1111</td>
             <td>2222</td>
             <td>3333</td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </main>
