--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -25,11 +25,12 @@
         </div>
         <div class="right-header">
           <h2 class="records">table of records</h2>
-          <img class="sound" src="./assets/svg/volume.svg" alt="sound" />
+          <div class="sound"></div>
         </div>
       </div>
     </header>
     <main class="container">
+      <audio src="./assets/audio/game-music-7408.mp3"></audio>
       <section class="content center">
         <div class="container-game">
           <div data-index="0" class="item"></div>
@@ -56,13 +57,7 @@
             <th>winning move</th>
           </tr>
         </thead>
-        <tbody>
-          <!-- <tr>
-            <td>1111</td>
-            <td>2222</td>
-            <td>3333</td>
-          </tr> -->
-        </tbody>
+        <tbody></tbody>
       </table>
     </main>
     <footer>
